# desktop

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
.github/workflows/: release-android.yml  release-linux.yml  release-macos.yml
data/: ee.s.app.desktop  ee.s.app.gschema.xml  ee.s.app.metainfo.xml
data/resources/: resources.gresource.xml  style.css
data/resources/ui/: preferences.ui  qr_dialog.ui  shortcuts.ui  window.ui
linux/: README.md
linux/packaging/: PKGBUILD  PKGBUILD-bin
macos/: .env.example  SPARKLE_SETUP.md  appcast.xml
macos/SEE/: Info.plist  SEE.entitlements  SEEApp.swift
macos/SEE.xcodeproj/: project.pbxproj
macos/SEE.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
macos/SEE/Views/: ContentView.swift
macos/SEE/Views/Files/: FileUploadView.swift
macos/scripts/: build-local.sh
src/: application.rs  config.rs  error.rs  main.rs
src/api/: client.rs  mod.rs
src/qrcode/: generator.rs  mod.rs
src/storage/: history.rs  mod.rs  models.rs
src/views/: files.rs  links.rs  mod.rs  preferences.rs  qr_dialog.rs  texts.rs  window.rs
src/widgets/: file_row.rs  link_row.rs  mod.rs  text_row.rs
